--- a/references_deka.bib
+++ b/references_deka.bib
@@ -240,3 +240,20 @@
 	pages = {109150},
 	file = {Full Text:C\:\\Users\\deka_\\Zotero\\storage\\WS7I63BJ\\Li et al. - 2022 - Collaborative edge computing for distributed CNN inference acceleration using receptive field-based.pdf:application/pdf},
 }
+
+@article{yeungUnifiedFocalLoss2022,
+	title = {Unified {Focal} loss: {Generalising} {Dice} and cross entropy-based losses to handle class imbalanced medical image segmentation},
+	volume = {95},
+	issn = {08956111},
+	shorttitle = {Unified {Focal} loss},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0895611121001750},
+	doi = {10.1016/j.compmedimag.2021.102026},
+	language = {en},
+	urldate = {2025-04-23},
+	journal = {Computerized Medical Imaging and Graphics},
+	author = {Yeung, Michael and Sala, Evis and Schönlieb, Carola-Bibiane and Rundo, Leonardo},
+	month = jan,
+	year = {2022},
+	pages = {102026},
+	file = {Full Text:C\:\\Users\\deka_\\Zotero\\storage\\RDRCNWSR\\Yeung et al. - 2022 - Unified Focal loss Generalising Dice and cross entropy-based losses to handle class imbalanced medi.pdf:application/pdf},
+}
