--- a/references_deka.bib
+++ b/references_deka.bib
@@ -257,3 +257,19 @@
 	pages = {102026},
 	file = {Full Text:C\:\\Users\\deka_\\Zotero\\storage\\RDRCNWSR\\Yeung et al. - 2022 - Unified Focal loss Generalising Dice and cross entropy-based losses to handle class imbalanced medi.pdf:application/pdf},
 }
+
+@misc{ronnebergerUNetConvolutionalNetworks2015,
+	title = {U-{Net}: {Convolutional} {Networks} for {Biomedical} {Image} {Segmentation}},
+	shorttitle = {U-{Net}},
+	url = {http://arxiv.org/abs/1505.04597},
+	doi = {10.48550/arXiv.1505.04597},
+	abstract = {There is large consent that successful training of deep networks requires many thousand annotated training samples. In this paper, we present a network and training strategy that relies on the strong use of data augmentation to use the available annotated samples more efficiently. The architecture consists of a contracting path to capture context and a symmetric expanding path that enables precise localization. We show that such a network can be trained end-to-end from very few images and outperforms the prior best method (a sliding-window convolutional network) on the ISBI challenge for segmentation of neuronal structures in electron microscopic stacks. Using the same network trained on transmitted light microscopy images (phase contrast and DIC) we won the ISBI cell tracking challenge 2015 in these categories by a large margin. Moreover, the network is fast. Segmentation of a 512x512 image takes less than a second on a recent GPU. The full implementation (based on Caffe) and the trained networks are available at http://lmb.informatik.uni-freiburg.de/people/ronneber/u-net .},
+	urldate = {2025-04-24},
+	publisher = {arXiv},
+	author = {Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
+	month = may,
+	year = {2015},
+	note = {arXiv:1505.04597 [cs]},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+	file = {Preprint PDF:C\:\\Users\\deka_\\Zotero\\storage\\23I6ERYS\\Ronneberger et al. - 2015 - U-Net Convolutional Networks for Biomedical Image Segmentation.pdf:application/pdf;Snapshot:C\:\\Users\\deka_\\Zotero\\storage\\FT4RQHH7\\1505.html:text/html},
+}
